fix(avatar): replace align-items start with flex-start

--- a/client/src/components/user-profile/avatar/avatar.css
+++ b/client/src/components/user-profile/avatar/avatar.css
@@ -13,7 +13,7 @@
 .inner {
   display: inline-flex;
   gap: 2rem;
-  align-items: start;
+  align-items: flex-start;
 }
 
 button {
